[package]
name = "equilibrium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
eframe = "0.35"
env_logger = "0.11.11"
image = { version = "0.25.10", features = ["png"], default-features = false }
kira = "0.12.2"
log = "0.4.33"
midir = "0.11"
raw-window-handle = "0.6"
tray-icon = "0.24.1"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
wmidi = "4.0.11"
